dev: add tests for FieldDescription, java 14 for tests
pom and github actions are being configured to support java 14 preview to make tests easier to write.

This prepares the repo for update to FieldDescription that allows more complicated metadata