@@ -8,13 +8,38 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>2.10.3</jackson.version>
         <!-- let us stick to old version, just in case (compatibility with legacy stuff outside) -->
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <maven.compiler.release>8</maven.compiler.release>
+        <main.compile.jdk.version>8</main.compile.jdk.version>
+        <test.compile.jdk.version>14</test.compile.jdk.version>
     </properties>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <!-- use this block to maven compile for release -->
+                    <source>${main.compile.jdk.version}</source>
+                    <target>${main.compile.jdk.version}</target>
+                    <testSource>${test.compile.jdk.version}</testSource>
+                    <testTarget>${test.compile.jdk.version}</testTarget>
+                    <testRelease>${test.compile.jdk.version}</testRelease>
+                    <testCompilerArgument>--enable-preview</testCompilerArgument>
+
+                    <!-- use this block to get around https://youtrack.jetbrains.com/issue/IDEA-85478 -->
+<!--                    <release>${test.compile.jdk.version}</release>-->
+<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
